--- a/Stickers Mortels Adèle/Base.lproj/Main.storyboard
+++ b/Stickers Mortels Adèle/Base.lproj/Main.storyboard
@@ -77,9 +77,8 @@
         <scene sceneID="Y0j-5o-Sry">
             <objects>
                 <viewController title="Packs List" id="UWH-JC-6Es" customClass="PacksListViewController" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="zCK-C6-L0b">
+                    <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCK-C6-L0b">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="9w9-2T-cOh">
                                 <rect key="frame" x="66" y="138" width="278" height="223"/>
@@ -87,9 +86,8 @@
                                     <constraint firstAttribute="width" secondItem="9w9-2T-cOh" secondAttribute="height" multiplier="15:8" id="k8V-6C-6df"/>
                                 </constraints>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ifs-qe-Gmk">
-                                <rect key="frame" x="-2" y="490" width="414" height="260"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ifs-qe-Gmk">
+                                <rect key="frame" x="0.0" y="636" width="414" height="226"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackCell" rowHeight="91" id="CwE-Jo-imy" customClass="PackTableViewCell" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target">
@@ -144,6 +142,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="ifs-qe-Gmk" firstAttribute="leading" secondItem="6Pz-O1-Wa6" secondAttribute="leading" id="1hc-oW-25Y"/>
+                            <constraint firstItem="6Pz-O1-Wa6" firstAttribute="bottom" secondItem="ifs-qe-Gmk" secondAttribute="bottom" id="ASq-l8-A7l"/>
+                            <constraint firstItem="ifs-qe-Gmk" firstAttribute="centerX" secondItem="zCK-C6-L0b" secondAttribute="centerX" id="Ay4-Gk-cz4"/>
                             <constraint firstItem="9w9-2T-cOh" firstAttribute="top" secondItem="6Pz-O1-Wa6" secondAttribute="top" constant="50" id="Ugd-kT-lsL"/>
                             <constraint firstItem="9w9-2T-cOh" firstAttribute="centerX" secondItem="zCK-C6-L0b" secondAttribute="centerX" id="v6Z-gs-5ll"/>
                         </constraints>
