--- a/Stickers Mortels Adèle/Base.lproj/Main.storyboard
+++ b/Stickers Mortels Adèle/Base.lproj/Main.storyboard
@@ -90,45 +90,39 @@
                                 <rect key="frame" x="0.0" y="636" width="414" height="226"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackCell" rowHeight="91" id="CwE-Jo-imy" customClass="PackTableViewCell" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="91"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackCell" rowHeight="70" id="CwE-Jo-imy" customClass="PackTableViewCell" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CwE-Jo-imy" id="swU-zm-XrA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="91"/>
-                                            <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CwE-Jo-imy" translatesAutoresizingMaskIntoConstraints="NO" id="swU-zm-XrA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Z0v-Ai-hCK">
-                                                    <rect key="frame" x="0.0" y="18" width="117" height="55"/>
-                                                    <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad001_512px" translatesAutoresizingMaskIntoConstraints="NO" id="wL6-Ks-YfC">
-                                                            <rect key="frame" x="0.0" y="0.0" width="55" height="55"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="55" id="2KQ-HB-UCv"/>
-                                                                <constraint firstAttribute="width" constant="55" id="T56-bn-Qn3"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="z2S-tl-ne6">
-                                                            <rect key="frame" x="75" y="0.0" width="42" height="55"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahw-Kt-uRh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="42" height="27.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOl-tT-Rbl">
-                                                                    <rect key="frame" x="0.0" y="27.5" width="42" height="27.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                        </stackView>
-                                                    </subviews>
-                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad001_512px" translatesAutoresizingMaskIntoConstraints="NO" id="wL6-Ks-YfC">
+                                                    <rect key="frame" x="10" y="-27.5" width="55" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="55" id="2KQ-HB-UCv"/>
+                                                        <constraint firstAttribute="width" constant="55" id="T56-bn-Qn3"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahw-Kt-uRh">
+                                                    <rect key="frame" x="75" y="-20.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fOl-tT-Rbl">
+                                                    <rect key="frame" x="75" y="5.5" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Z0v-Ai-hCK" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" id="rEX-na-m5i"/>
+                                                <constraint firstItem="ahw-Kt-uRh" firstAttribute="leading" secondItem="wL6-Ks-YfC" secondAttribute="trailing" constant="10" id="04f-I1-yow"/>
+                                                <constraint firstItem="wL6-Ks-YfC" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" id="0Ie-m1-SL3"/>
+                                                <constraint firstItem="fOl-tT-Rbl" firstAttribute="top" secondItem="ahw-Kt-uRh" secondAttribute="bottom" constant="5" id="0gC-eJ-qwG"/>
+                                                <constraint firstItem="ahw-Kt-uRh" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" constant="-10" id="XHJ-7W-kw2"/>
+                                                <constraint firstItem="fOl-tT-Rbl" firstAttribute="leading" secondItem="ahw-Kt-uRh" secondAttribute="leading" id="gtD-Jv-cba"/>
+                                                <constraint firstItem="wL6-Ks-YfC" firstAttribute="leading" secondItem="swU-zm-XrA" secondAttribute="leading" constant="10" id="jkl-vR-AEw"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
