--- a/Stickers Mortels Adèle/Base.lproj/Main.storyboard
+++ b/Stickers Mortels Adèle/Base.lproj/Main.storyboard
@@ -132,14 +132,19 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DL8-Bh-cVt">
+                                                    <rect key="frame" x="-33" y="-8" width="18" height="16"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="ahw-Kt-uRh" firstAttribute="leading" secondItem="wL6-Ks-YfC" secondAttribute="trailing" constant="10" id="04f-I1-yow"/>
                                                 <constraint firstItem="wL6-Ks-YfC" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" id="0Ie-m1-SL3"/>
                                                 <constraint firstItem="fOl-tT-Rbl" firstAttribute="top" secondItem="ahw-Kt-uRh" secondAttribute="bottom" constant="5" id="0gC-eJ-qwG"/>
+                                                <constraint firstItem="DL8-Bh-cVt" firstAttribute="trailing" secondItem="swU-zm-XrA" secondAttribute="trailing" constant="-15" id="Q3A-Pz-7xp"/>
                                                 <constraint firstItem="ahw-Kt-uRh" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" constant="-10" id="XHJ-7W-kw2"/>
                                                 <constraint firstItem="fOl-tT-Rbl" firstAttribute="leading" secondItem="ahw-Kt-uRh" secondAttribute="leading" id="gtD-Jv-cba"/>
                                                 <constraint firstItem="wL6-Ks-YfC" firstAttribute="leading" secondItem="swU-zm-XrA" secondAttribute="leading" constant="10" id="jkl-vR-AEw"/>
+                                                <constraint firstItem="DL8-Bh-cVt" firstAttribute="centerY" secondItem="swU-zm-XrA" secondAttribute="centerY" id="qSv-M4-w8s"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -177,5 +182,6 @@
     <resources>
         <image name="ad001_512px" width="512" height="512"/>
         <image name="banner" width="3560" height="2262"/>
+        <image name="plus" catalog="system" width="64" height="56"/>
     </resources>
 </document>
