--- a/Stickers Mortels Adèle/Base.lproj/Main.storyboard
+++ b/Stickers Mortels Adèle/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                 <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="svH-Pt-448">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eN4-dX-tie">
                                 <rect key="frame" x="0.0" y="88" width="414" height="714"/>
@@ -71,12 +72,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="nIe-DU-jNd" firstAttribute="bottom" secondItem="svH-Pt-448" secondAttribute="bottom" constant="-54" id="Khz-b5-NNl"/>
-                            <constraint firstItem="eN4-dX-tie" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" id="Ncv-g4-sjM"/>
-                            <constraint firstItem="eN4-dX-tie" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" constant="88" id="Vcp-jF-dZK"/>
-                            <constraint firstItem="eN4-dX-tie" firstAttribute="trailing" secondItem="svH-Pt-448" secondAttribute="trailing" id="acz-kA-Alz"/>
-                            <constraint firstItem="eN4-dX-tie" firstAttribute="bottom" secondItem="svH-Pt-448" secondAttribute="bottom" constant="-94" id="oZT-EQ-hu4"/>
-                            <constraint firstItem="nIe-DU-jNd" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="usJ-na-J9m"/>
+                            <constraint firstItem="nIe-DU-jNd" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" constant="-20" id="Khz-b5-NNl"/>
+                            <constraint firstItem="eN4-dX-tie" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" id="Ncv-g4-sjM"/>
+                            <constraint firstItem="eN4-dX-tie" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" id="Vcp-jF-dZK"/>
+                            <constraint firstItem="eN4-dX-tie" firstAttribute="trailing" secondItem="VUw-jc-0yf" secondAttribute="trailing" id="acz-kA-Alz"/>
+                            <constraint firstItem="eN4-dX-tie" firstAttribute="bottom" secondItem="VUw-jc-0yf" secondAttribute="bottom" constant="-60" id="oZT-EQ-hu4"/>
+                            <constraint firstItem="nIe-DU-jNd" firstAttribute="centerX" secondItem="VUw-jc-0yf" secondAttribute="centerX" id="usJ-na-J9m"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
                     </view>
@@ -96,6 +97,7 @@
                 <viewController title="Packs List" id="UWH-JC-6Es" customClass="PacksListViewController" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCK-C6-L0b">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="9w9-2T-cOh">
                                 <rect key="frame" x="66" y="138" width="278" height="223"/>
@@ -161,9 +163,9 @@
                         <constraints>
                             <constraint firstItem="ifs-qe-Gmk" firstAttribute="leading" secondItem="6Pz-O1-Wa6" secondAttribute="leading" id="1hc-oW-25Y"/>
                             <constraint firstItem="6Pz-O1-Wa6" firstAttribute="bottom" secondItem="ifs-qe-Gmk" secondAttribute="bottom" id="ASq-l8-A7l"/>
-                            <constraint firstItem="ifs-qe-Gmk" firstAttribute="centerX" secondItem="zCK-C6-L0b" secondAttribute="centerX" id="Ay4-Gk-cz4"/>
+                            <constraint firstItem="ifs-qe-Gmk" firstAttribute="centerX" secondItem="6Pz-O1-Wa6" secondAttribute="centerX" id="Ay4-Gk-cz4"/>
                             <constraint firstItem="9w9-2T-cOh" firstAttribute="top" secondItem="6Pz-O1-Wa6" secondAttribute="top" constant="50" id="Ugd-kT-lsL"/>
-                            <constraint firstItem="9w9-2T-cOh" firstAttribute="centerX" secondItem="zCK-C6-L0b" secondAttribute="centerX" id="v6Z-gs-5ll"/>
+                            <constraint firstItem="9w9-2T-cOh" firstAttribute="centerX" secondItem="6Pz-O1-Wa6" secondAttribute="centerX" constant="-2" id="v6Z-gs-5ll"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Pz-O1-Wa6"/>
                     </view>
