--- a/Stickers Mortels Adèle/Base.lproj/Main.storyboard
+++ b/Stickers Mortels Adèle/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
         <!--Detail-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="Stickers_Mortelle_Adèle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="svH-Pt-448">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -43,7 +43,7 @@
                                     <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerImageCell" id="JI6-h5-ZiK" customClass="StickerImageViewCell" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StickerImageCell" id="JI6-h5-ZiK" customClass="StickerImageViewCell" customModule="Stickers_Mortelle_Adèle" customModuleProvider="target">
                                         <rect key="frame" x="101.5" y="16" width="211" height="218"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="e2T-qT-nfO">
@@ -94,7 +94,7 @@
         <!--Packs List-->
         <scene sceneID="Y0j-5o-Sry">
             <objects>
-                <viewController title="Packs List" id="UWH-JC-6Es" customClass="PacksListViewController" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Packs List" id="UWH-JC-6Es" customClass="PacksListViewController" customModule="Stickers_Mortelle_Adèle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCK-C6-L0b">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -109,7 +109,7 @@
                                 <rect key="frame" x="0.0" y="636" width="414" height="226"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackCell" rowHeight="70" id="CwE-Jo-imy" customClass="PackTableViewCell" customModule="Stickers_Mortels_Ade_le" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PackCell" rowHeight="70" id="CwE-Jo-imy" customClass="PackTableViewCell" customModule="Stickers_Mortelle_Adèle" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CwE-Jo-imy" translatesAutoresizingMaskIntoConstraints="NO" id="swU-zm-XrA">
@@ -134,8 +134,12 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DL8-Bh-cVt">
-                                                    <rect key="frame" x="-33" y="-8" width="18" height="16"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DL8-Bh-cVt">
+                                                    <rect key="frame" x="-39" y="-12" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="CJm-mc-GIo"/>
+                                                        <constraint firstAttribute="height" constant="24" id="pcz-n3-jW2"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -153,6 +157,7 @@
                                             <outlet property="packIconImage" destination="wL6-Ks-YfC" id="m8z-1x-Ank"/>
                                             <outlet property="packNameLabel" destination="ahw-Kt-uRh" id="5nQ-LT-krx"/>
                                             <outlet property="packSizeLabel" destination="fOl-tT-Rbl" id="2OB-uW-eX3"/>
+                                            <outlet property="plusBtn" destination="DL8-Bh-cVt" id="CL4-S5-pMV"/>
                                             <segue destination="JEX-9P-axG" kind="show" identifier="showPackDetailsSegue" id="FtI-9w-TcW"/>
                                         </connections>
                                     </tableViewCell>
@@ -184,6 +189,5 @@
     <resources>
         <image name="ad001_512px" width="512" height="512"/>
         <image name="banner" width="3560" height="2262"/>
-        <image name="plus" catalog="system" width="64" height="56"/>
     </resources>
 </document>
